<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="app_list_header">My Nanodegree Apps!</string>
    <string name="app1_title">POPULAR MOVIES</string>
    <string name="app2_title">STOCK HAWK</string>
    <string name="app3_title">BUILD IT BIGGER</string>
    <string name="app4_title">MAKE YOUR APP MATERIAL</string>
    <string name="app5_title">GO UBIQUITOUS</string>
    <string name="app6_title">CAPSTONE</string>

    <string name="toast_prompt">This button will launch: </string>
</resources>
