<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tristanheal.appportfolio.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_list_header"
            android:gravity="center_horizontal"
            style="@style/TitleTextStyle"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/app1_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app1_title"
            style="@style/AppButtonsStyle"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/app2_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app2_title"
            style="@style/AppButtonsStyle"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/app3_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app3_title"
            style="@style/AppButtonsStyle"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/app4_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app4_title"
            style="@style/AppButtonsStyle"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/app5_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app5_title"
            style="@style/AppButtonsStyle"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/app6_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app6_title"
            style="@style/AppButtonsStyle"/>

    </LinearLayout>
</FrameLayout>
